@@ -1,3 +1,9 @@
+Wed Nov 17 09:26:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.idl:
+        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeComp.idl:
+        Add no ami4ccm interface.
+
 Wed Nov 17 09:24:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
